7.1.2:

Bug Fixes :

* Fixed component bound output bug in maya ProceduralHolder node

7.1.2:

Improvements :

* Added support for uniform primitive variables in IECoreRI::SXRenderer

* IECoreMaya PresetsUI LoadUI organizes the applicable presets by the path they came from

Bug fixes :

* Fixed exceptions when passing 64bit integers from python to MurmurHash.append method.

* Added "PHOTOMETRIC_MINISWHITE" to supported photometric interpretations in IECore::TIFFImageReader, so it can read 3delight's depthmap shadows.

7.1.1:

Bug Fixes :

* Fixed some bugs in the Wrapper/WrapperGarbageCollector code

7.1.0:

Additions :

* Added Alexa V3 Log C colorspace registered on for image reader and writers.

* Added support for writing Color3fVectorData primvars in IECoreRI::PTCParticleWriter

* Added DiskPrimitive

* The IECoreRI.Renderer class uses 3delight's new instance scoping mechanism

Changes :

* Removed deprecated "objectBegin", "objectEnd" and objectInstance"


7.0.0:

Additions :

* Added object filter option to IECore.CapturingRenderer, so you can select the objects you want it to output

* "Convert to Geometry" maya DAG menu option should now respect component selections - ie it only converts selected components

* Added alpha test attributes for IECoreGL::Renderer

* FloatParameter and DoubleParameter now respond to a 'precision' field in their UI userData in maya, allowing you to set the number of decimal places they're displayed at

* Added the MurmurHash class, which implements the Murmur Hash version 3
algorithm.

* All Object derived classes now have a hash() method which can be used to
generate a hash of their contents as an instance of the new MurmurHash class.

* Stubs for the IECore procedurals are now installed in addition to the stubs for the IECore ops.

* Added an ieDisplay nuke node, which accepts incoming renders from RenderMan or Nuke using the existing cortex display drivers.
