@@ -1,6 +1,6 @@
 ##########################################################################
 #
-#  Copyright (c) 2010, Image Engine Design Inc. All rights reserved.
+#  Copyright (c) 2010-2012, Image Engine Design Inc. All rights reserved.
 #
 #  Redistribution and use in source and binary forms, with or without
 #  modification, are permitted provided that the following conditions are
@@ -81,6 +81,9 @@ class ClassParameter( IECore.CompoundParameter ) :
 			self.addParameters(
 				self.__classInstance.parameters().values()
 			)
+			
+			# copy user data over
+			self.userData().copyFrom( self.__classInstance.parameters().userData() )
 		
 		self.__className = className
 		self.__classVersion = classVersion
